# defmt

firmware/panic-probe/: Cargo.toml
