[package]
authors = ["The Knurling Authors"]
categories = ["embedded", "no-std"]
description = "Panic handler that exits `probe-run` with an error code"
edition = "2021"
keywords = ["knurling", "panic-impl", "defmt", "probe-run"]
license = "MIT OR Apache-2.0"
name = "panic-probe"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.1"

[dependencies]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m", rev = "ec6b3ba49db60b23885921d238d3a9e86cf3e9e9"}
defmt = { version = "0.3.4", default-features = false, optional = true }
rtt-target = { version = "0.4", optional = true }


[features]
# Print the panic message using `rtt-target`.
print-rtt = ["rtt-target"]
# Print the panic message using `defmt`.
print-defmt = ["defmt", "defmt-error"]

defmt-error = [] # internal feature, do not use

[package.metadata.docs.rs]
default-target = "thumbv7m-none-eabi"
